--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,19 +1,31 @@
+
 name: Deploy Angular to GitHub Pages
+
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main   # change if your default branch is different
 
 jobs:
-  build-and-deploy:
+  build-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout source
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: '20'
-      - run: npm ci
-      - run: npm run build -- --configuration production
-      - uses: JamesIves/github-pages-deploy-action@v4
+          node-version: 20
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build Angular app
+        run: npm run build -- --configuration production --base-href /Landing/
+
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages            # target branch
-          folder: dist/<your-app-name> # path to built files
+          branch: gh-pages                     # deployment branch
+          folder: dist/Landing                  # path to built app (match your outputPath in angular.json)
