--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,31 +1,28 @@
-
 name: Deploy Angular to GitHub Pages
 
 on:
   push:
     branches:
-      - main   # change if your default branch is different
+      - main
+
+permissions:
+  contents: write
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: Install dependencies
-        run: npm ci
+      - run: npm ci
 
-      - name: Build Angular app
-        run: npm run build -- --configuration production --base-href /Landing/
+      - run: npm run build -- --configuration production --base-href /Landing/
 
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
+      - uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages                     # deployment branch
-          folder: dist/landing                  # path to built app (match your outputPath in angular.json)
+          branch: gh-pages
+          folder: dist/landing
